; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/skylake/extr_skl-messages.c_skl_dsp_trigger.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/skylake/extr_skl-messages.c_skl_dsp_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.hdac_bus = type { i32 }
%struct.hdac_stream = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@SNDRV_PCM_STREAM_PLAYBACK = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i32)* @skl_dsp_trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skl_dsp_trigger(%struct.device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.hdac_bus*, align 8
  %9 = alloca %struct.hdac_stream*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.device*, %struct.device** %5, align 8
  %11 = call %struct.hdac_bus* @dev_get_drvdata(%struct.device* %10)
  store %struct.hdac_bus* %11, %struct.hdac_bus** %8, align 8
  %12 = load %struct.hdac_bus*, %struct.hdac_bus** %8, align 8
  %13 = icmp ne %struct.hdac_bus* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* @ENODEV, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %31

17:                                               ; preds = %3
  %18 = load %struct.hdac_bus*, %struct.hdac_bus** %8, align 8
  %19 = load i32, i32* @SNDRV_PCM_STREAM_PLAYBACK, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call %struct.hdac_stream* @snd_hdac_get_stream(%struct.hdac_bus* %18, i32 %19, i32 %20)
  store %struct.hdac_stream* %21, %struct.hdac_stream** %9, align 8
  %22 = load %struct.hdac_stream*, %struct.hdac_stream** %9, align 8
  %23 = icmp ne %struct.hdac_stream* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %17
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %4, align 4
  br label %31

27:                                               ; preds = %17
  %28 = load %struct.hdac_stream*, %struct.hdac_stream** %9, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @snd_hdac_dsp_trigger(%struct.hdac_stream* %28, i32 %29)
  store i32 0, i32* %4, align 4
  br label %31

31:                                               ; preds = %27, %24, %14
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local %struct.hdac_bus* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.hdac_stream* @snd_hdac_get_stream(%struct.hdac_bus*, i32, i32) #1

declare dso_local i32 @snd_hdac_dsp_trigger(%struct.hdac_stream*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
